--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-fastapi
-uvicorn
-gspread
-oauth2client
+fastapi==0.115.12
+gspread==6.2.0
+oauth2client==4.1.3
+pydantic==2.11.0
+pydantic_settings==2.8.1
+pytz==2024.2
+uvicorn==0.34.0
 requests
 gunicorn
 dotenv
-google-genai
-pytz
+google-generativeai
+httpx
