feat: add ChatGPT integration and AI provider selection
Adds ChatGPT as an AI provider option, with API endpoints
to switch between ChatGPT and Gemini.  Updates README.

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,19 @@
 TELEGRAM_BOT_TOKEN=your_bot_token_here
 TELEGRAM_CHAT_ID=your_chat_id_here
 
+# AI Provider Configuration
+# Pilih "chatgpt" atau "gemini"
+AI_PROVIDER=chatgpt
+
 # Gemini API Configuration
 GEMINI_API_KEY=your_gemini_api_key
 GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent
 
+# OpenAI/ChatGPT Configuration
+OPENAI_API_KEY=your_openai_api_key_here
+
 # Webhook Verification
 VERIFY_TOKEN=your_verify_token_here
+
+# Google Sheets
+GOOGLE_SHEET_NAME=Keuangan Telegram
